# fyers-c-sdk

./: .gitignore  CMakeLists.txt  README.md  restart.sh
cmake/: fyers-api-c-config.cmake.in
examples/: CMakeLists.txt  auth_example.c  cpp_test.cpp  data_ws_example.c  depth_update.c  index_update.c  lite_symbol_update.c  market_data_example.c  on_orders.c  on_position.c  on_trade.c  order_ws_example.c  sample_code.c  symbol_update.c  trading_example.c  unsubscribe_update.c  websocket_example.c
include/: fyers_api.h  fyers_config.h  fyers_data_ws.h  fyers_export.h  fyers_http_client.h  fyers_logger.h  fyers_model.h  fyers_order_ws.h  fyers_session.h  fyers_websocket.h
src/: fyers_api.c  fyers_config.c  fyers_data_ws.c  fyers_http_client.c  fyers_logger.c  fyers_model.c  fyers_order_ws.c  fyers_session.c  fyers_tbt_ws.c
